# rustls-platform-verifier

./: .gitignore  CHANGELOG  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: android_builds.yml  audit.yml  cert-update.yml  ci.yml  nix.yml
admin/: MAINTAINENCE.md  RELEASING.md
android/: .gitignore  build.gradle  settings.gradle
android-release-support/: Cargo.toml  pom-template.xml
android-release-support/maven/rustls/rustls-platform-verifier/: maven-metadata-local.xml
android-release-support/maven/rustls/rustls-platform-verifier/0.1.0/: rustls-platform-verifier-0.1.0.aar  rustls-platform-verifier-0.1.0.pom
android-release-support/src/: lib.rs
android/.run/: All Tests.run.xml
android/gradle/: libraries.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/platform-tls/: build.gradle
android/platform-tls/src/androidTest/java/com/onepassword/platform_tls/: CertificateVerifierTests.kt
android/platform-tls/src/main/: AndroidManifest.xml
android/platform-tls/src/main/java/com/onepassword/platform_tls/: CertificateVerifier.kt
android/rustls-platform-verifier/: .gitignore  build.gradle  proguard-rules.pro
android/rustls-platform-verifier/src/androidTest/java/com/onepassword/platform_tls/: CertificateVerifierTests.kt
android/rustls-platform-verifier/src/androidTest/java/org/rustls/platformverifier/: CertificateVerifierTests.kt
android/rustls-platform-verifier/src/androidTest/java/rustls/platformverifier/android/: CertificateVerifierTests.kt
android/rustls-platform-verifier/src/main/: AndroidManifest.xml
android/rustls-platform-verifier/src/main/java/com/onepassword/platform_tls/: CertificateVerifier.kt
android/rustls-platform-verifier/src/main/java/org/rustls/platformverifier/: CertificateVerifier.kt
android/rustls-platform-verifier/src/main/java/rustls/platformverifier/android/: CertificateVerifier.kt
ci/: archive_android_release.sh  package_android_release.sh  verify_android_release.sh
rustls-platform-verifier/: Cargo.toml
rustls-platform-verifier/examples/: update-certs.rs
rustls-platform-verifier/src/: android.rs  lib.rs  windows.rs
rustls-platform-verifier/src/tests/: ffi.rs  mod.rs
rustls-platform-verifier/src/tests/verification_mock/: ca.go  mod.rs  root1-int1-ee_1-good.crt  root1-int1-ee_1-good.ocsp  root1-int1-ee_1-revoked.crt  root1-int1-ee_1-revoked.ocsp  root1-int1-ee_1-wrong_eku.crt  root1-int1-ee_127.0.0.1-good.crt  root1-int1-ee_127.0.0.1-good.ocsp  root1-int1-ee_127.0.0.1-revoked.crt  root1-int1-ee_127.0.0.1-revoked.ocsp  root1-int1-ee_127.0.0.1-wrong_eku.crt  root1-int1-ee_example.com-good.crt  root1-int1-ee_example.com-good.ocsp  root1-int1-ee_example.com-revoked.crt  root1-int1-ee_example.com-revoked.ocsp  root1-int1-ee_example.com-wrong_eku.crt  root1-int1.crt  root1.crt  root2.crt  root3.crt  root4.crt
rustls-platform-verifier/src/tests/verification_real_world/: 1password_com_valid_1.crt  agilebits_com_valid_1.crt  aws_amazon_com_valid_1.crt  letsencrypt_org_valid_1.crt  mod.rs  update_valid_ee_certs.rs
rustls-platform-verifier/src/verification/: android.rs  apple.rs  mod.rs  others.rs  windows.rs
src/: android.rs  lib.rs
src/tests/: ffi.rs  mod.rs
src/tests/verification_mock/: ca.go  go.mod  mod.rs  root1-int1-ee_1-good.crt  root1-int1-ee_1-good.ocsp  root1-int1-ee_1-revoked.crt  root1-int1-ee_1-revoked.ocsp  root1-int1-ee_1-wrong_eku.crt  root1-int1-ee_127.0.0.1-good.crt  root1-int1-ee_127.0.0.1-good.ocsp  root1-int1-ee_127.0.0.1-revoked.crt  root1-int1-ee_127.0.0.1-revoked.ocsp  root1-int1-ee_127.0.0.1-wrong_eku.crt  root1-int1-ee_example.com-good.crt  root1-int1-ee_example.com-good.ocsp  root1-int1-ee_example.com-revoked.crt  root1-int1-ee_example.com-revoked.ocsp  root1-int1-ee_example.com-wrong_eku.crt  root1-int1.crt  root1.crt
src/tests/verification_real_world/: 1password_com_valid_1.crt  agilebits_com_valid_1.crt  letsencrypt_org_valid_1.crt  mod.rs  revoked_badssl_com_1.ocsp  revoked_badssl_com_2.crt  update_valid_1_cert.bash  update_valid_ee_certs.bash  update_valid_ee_certs.rs
src/verification/: android.rs  apple.rs  mod.rs  others.rs  windows.rs
